<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.laladev.moneyjinn</groupId>
		<artifactId>moneyjinn-parent</artifactId>
		<version>0.0.3-SNAPSHOT</version>
	</parent>

	<artifactId>moneyjinn-server-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<module>moneyjinn-model</module>
		<module>moneyjinn-service-api</module>
		<module>moneyjinn-service-impl</module>
		<module>moneyjinn-server</module>
	</modules>

	<properties>
		<moneyjinn-core.version>0.0.1-SNAPSHOT</moneyjinn-core.version>
		<moneyjinn-sepa-camt.version>0.0.1-SNAPSHOT</moneyjinn-sepa-camt.version>

		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
		<java.version>17</java.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<!-- Import dependency management from Spring Boot -->
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>

			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-core</artifactId>
				<version>${moneyjinn-core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-sepa-camt</artifactId>
				<version>${moneyjinn-sepa-camt.version}</version>
			</dependency>

			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-model</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-service-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>org.laladev.moneyjinn</groupId>
				<artifactId>moneyjinn-service-impl</artifactId>
				<version>${project.version}</version>
				<scope>runtime</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.pitest</groupId>
					<artifactId>pitest-maven</artifactId>
					<version>1.1.10</version>
					<configuration>
						<targetClasses>
							<!-- get Services clean first -->
							<param>org.laladev.moneyjinn.businesslogic.service.impl*</param>
							<!-- <param>org.laladev.moneyjinn.server.controller.impl*</param> 
								<param>org.laladev.moneyjinn.server.controller.mapper*</param> <param>org.laladev.moneyjinn.businesslogic.dao.data.mapper*</param> -->
						</targetClasses>
						<targetTests>
							<param>org.laladev.moneyjinn*</param>
						</targetTests>
						<timeoutConstant>20000</timeoutConstant>
						<!--<verbose>true</verbose> -->
						<threads>2</threads>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>